# learning_mcp

./: README.md  main.py  pyproject.toml
notebooks/: mcp.ipynb
src/learning_mcp/: __init__.py  server.py  whether.py
src/learning_mcp/configs/: settings.py
